[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyhal = { git =  "https://github.com/Godones/polyhal.git", branch = "dev" }
crate_interface = { git = "https://github.com/Byte-OS/crate_interface.git" }

log = "0.4"
fdt = "0.1.5"
buddy_system_allocator = "0.9.1"
spin = { version = "0.9.8", features = ["mutex"] }
bit_field = "0.10.2"

kprobe = { path = "../kprobe" }
#jtable = { path = "../jtable" }