[package]
name = "libbpf"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
printf-compat = { git = "https://github.com/lights0123/printf-compat.git", default-features = false }
elf = { version = "0.7", default-features = false }
rbpf = { path = "../rbpf", default-features = false}
anyhow = { version = "1.0", default-features = false }