[package]
name = "utest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7"
rbpf = { git = "https://github.com/qmonnet/rbpf.git" }
#rbpf = { path = "../rbpf" }
libbpf = { path = "../libbpf" }