[package]
name = "utest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
elf = "0.7"
#rbpf = { git = "https://github.com/qmonnet/rbpf.git" }
rbpf = { path = "../rbpf" }
libbpf = { path = "../libbpf" }
anyhow = { version = "1.0", default-features = false }
spin = "0.9.8"
log = "0"